--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "argon2": "^0.30.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "dayjs": "^1.11.7",
     "mysql2": "^3.3.2",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
