--- a/package.json
+++ b/package.json
@@ -6,6 +6,13 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
+    "prisma:dev:deploy": "prisma migrate deploy",
+    "db:dev:start": "npx prisma studio",
+    "db:dev:rm": "docker compose rm dev-db -s -f -v",
+    "db:dev:up": "docker compose up dev-db -d",
+    "db:migration": "npx prisma migrate dev --name init",
+    "db:dev:restart": "yarn db:dev:rm && yarn db:dev:up && sleep 1 && yarn prisma:dev:deploy",
+    "seed": "ts-node prisma/seeders/index.ts",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "node dist/main",
@@ -28,6 +35,8 @@
     "@nestjs/passport": "^9.0.1",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/typeorm": "^9.0.1",
+    "@prisma/client": "^4.16.0",
+    "@types/faker": "^6.6.9",
     "argon2": "^0.30.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
@@ -41,6 +50,7 @@
     "typeorm": "^0.3.16"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.0.2",
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
@@ -52,6 +62,7 @@
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.50.0",
     "@typescript-eslint/parser": "^5.50.0",
+    "dotenv": "^16.3.1",
     "dotenv-cli": "^7.0.0",
     "eslint": "^8.2.0",
     "eslint-config-airbnb": "19.0.4",
@@ -65,6 +76,7 @@
     "jest": "29.3.1",
     "pactum": "^3.3.2",
     "prettier": "^2.3.2",
+    "prisma": "^4.16.0",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
     "ts-jest": "29.0.3",
