--- a/.env.test
+++ b/.env.test
@@ -1,7 +1,2 @@
 JWT_SECRET='RaZwCD=AOrmoS!=dUVOAsLf0afQ3meDJ4cHoO40PLNMrMEWT1qXZO5ZBMa=XfDq3'
-
-# Database
-DATABASE_HOST=localhost
-DATABASE_NAME=mobile-app
-DATABASE_USERNAME=root
-DATABASE_PASSWORD=
+DATABASE_URL="postgresql://postgres:123@localhost:5434/travelapp?schema=public"
