--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "db:dev:start": "npx prisma studio",
     "db:dev:rm": "docker compose rm dev-db -s -f -v",
     "db:dev:up": "docker compose up dev-db -d",
-    "db:migration": "npx prisma migrate dev --name init",
-    "db:dev:restart": "yarn db:dev:rm && yarn db:dev:up && sleep 1 && yarn prisma:dev:deploy",
-    "seed": "ts-node prisma/seeders/index.ts",
+    "db:migration": "npx prisma migrate dev",
+    "db:dev:restart": "yarn db:dev:rm && yarn db:dev:up && sleep 3 && yarn prisma:dev:deploy",
+    "seed": "yarn db:dev:restart && ts-node prisma/seeders/index.ts",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "node dist/main",
