--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "dayjs": "^1.11.7",
+    "lodash": "^4.17.21",
     "mysql2": "^3.3.2",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
