--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "pactum": "^3.3.2",
     "prettier": "^2.3.2",
     "source-map-support": "^0.5.20",
+    "sqlite3": "^5.1.6",
     "supertest": "^6.1.3",
     "ts-jest": "29.0.3",
     "ts-loader": "^9.2.3",
