--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "jest": "29.3.1",
+    "nestjs-seeder": "^0.3.2",
     "pactum": "^3.3.2",
     "prettier": "^2.3.2",
     "source-map-support": "^0.5.20",
