improvement env test file

--- a/.env.test
+++ b/.env.test
@@ -2,6 +2,11 @@ JWT_SECRET='RaZwCD=AOrmoS!=dUVOAsLf0afQ3meDJ4cHoO40PLNMrMEWT1qXZO5ZBMa=XfDq3'
 
 # Database
 DATABASE_HOST=localhost
-DATABASE_NAME=mobile-app
+DATABASE_NAME=travel-app-database
 DATABASE_USERNAME=root
 DATABASE_PASSWORD=
+
+UPLOAD_DIR=./upload
+MAX_FILE=1024*1024*10
+
+TZ=UTC
