feat: migrate to postgres

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cs-develop-0001",
+  "name": "travel-app-backend",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -18,7 +18,11 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "pretest:e2e": "yarn db:test:restart",
-    "test:e2e": "dotenv  -e .env.test -- jest --watch --no-cache --config ./test/jest-e2e.json"
+    "test:e2e": "dotenv  -e .env.test -- jest --watch --no-cache --config ./test/jest-e2e.json",
+    "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
+    "typeorm:migration:generate:unix": "yarn typeorm migration:generate src/migrations/$npm_config_name -d src/db/migration.config.ts",
+    "typeorm:migration:generate:win": "yarn typeorm migration:generate src/migrations/%npm_config_name% -d src/db/migration.config.ts",
+    "typeorm:migration:run": "yarn typeorm migration:run -d src/db/migration.config.ts"
   },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
@@ -28,7 +32,7 @@
     "@nestjs/passport": "^9.0.1",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/serve-static": "^4.0.0",
-    "@nestjs/typeorm": "^9.0.1",
+    "@nestjs/typeorm": "^10.0.2",
     "argon2": "^0.30.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
@@ -39,9 +43,11 @@
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
-    "typeorm": "^0.3.16",
+    "typeorm": "^0.3.20",
+    "typeorm-extension": "^3.4.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
