--- a/.env.test
+++ b/.env.test
@@ -2,9 +2,13 @@ JWT_SECRET='RaZwCD=AOrmoS!=dUVOAsLf0afQ3meDJ4cHoO40PLNMrMEWT1qXZO5ZBMa=XfDq3'
 
 # Database
 DATABASE_HOST=localhost
-DATABASE_NAME=travel-app-database
-DATABASE_USERNAME=root
-DATABASE_PASSWORD=
+DATABASE_PORT=5432
+DATABASE_NAME=postgres
+DATABASE_USERNAME=postgres
+DATABASE_PASSWORD=haslo123
+DATABASE_SCHEMA=travel_app
+
+ENV=development
 
 UPLOAD_DIR=./upload
 MAX_FILE=1024*1024*10
