--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "pretest:e2e": "yarn db:test:restart",
     "test:e2e": "dotenv  -e .env.test -- jest --watch --no-cache --config ./test/jest-e2e.json",
     "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
-    "typeorm:migration:generate:unix": "yarn typeorm migration:generate src/db/migrations/$npm_config_name -d src/db/migration.config.ts --outputJs",
-    "typeorm:migration:generate:win": "yarn typeorm migration:generate src/db/migrations/%npm_config_name% -d src/db/migration.config.ts --outputJs",
+    "typeorm:migration:generate": "yarn typeorm migration:generate src/db/migrations/migration -d src/db/migration.config.ts --outputJs",
     "typeorm:migration:run": "yarn typeorm migration:run -d src/db/migration.config.ts",
     "typeorm:seed:run": "yarn build && ts-node -r tsconfig-paths/register ./node_modules/typeorm-extension/bin/cli.cjs seed:run -d ./src/db/migration.config.ts",
     "typeorm:seed:create": "ts-node -r tsconfig-paths/register ./node_modules/typeorm-extension/bin/cli.cjs seed:create --root='./src/db/seeds'"
