--- a/package.json
+++ b/package.json
@@ -36,8 +36,10 @@
     "@nestjs/serve-static": "^4.0.0",
     "@nestjs/typeorm": "^10.0.2",
     "argon2": "^0.30.3",
+    "buffer-to-stream": "^1.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "cloudinary": "^2.0.1",
     "dayjs": "^1.11.7",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
@@ -56,6 +58,7 @@
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
+    "@types/buffer-to-stream": "^1.0.3",
     "@types/express": "^4.17.13",
     "@types/jest": "29.2.4",
     "@types/multer": "^1.4.11",
